added first block

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
+
 <body>
+    <div>
+        <h3>My First Website</h3>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur molestiae saepe, cum fuga eaque quam optio illo adipisci, harum numquam aspernatur, libero nulla dolorem dignissimos! Molestias, debitis? Atque, est veritatis!
+
+
+        </p>
+    </div>
     
 </body>
 </html>
