--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First blog</h3>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur molestiae saepe, cum fuga eaque quam optio illo adipisci, harum numquam aspernatur, libero nulla dolorem dignissimos! Molestias, debitis? Atque, est veritatis!
+
+
+        </p>
+    </div>
+     <div>
+        <h3>My second blog</h3>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur molestiae saepe, cum fuga eaque quam optio illo adipisci, harum numquam aspernatur, libero nulla dolorem dignissimos! Molestias, debitis? Atque, est veritatis!
+
+
+        </p>
+    </div>
+     <div>
+        <h3>My Thrird blog</h3>
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur molestiae saepe, cum fuga eaque quam optio illo adipisci, harum numquam aspernatur, libero nulla dolorem dignissimos! Molestias, debitis? Atque, est veritatis!
 
