--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 
         </p>
     </div>
+    <div>
+        <h3>How to push increment code</h3>
+        <ul>
+            <li> git add . </li>
+            <li>git commit -m" meaningful msg"</li>
+            <li> git push</li>
+        </ul>
+    </div>
     
 </body>
 </html>
